[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "patchforge"
version = "0.1.0"
description = "Installable CLI for running llama-server in the background and using Aider against it."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aider-chat==0.86.2",
]

[project.scripts]
patchforge = "patchforge.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
